[package]
name = "density"
description = "Find the average size of files in a directory"

repository = "https://github.com/Alexendoo/density"

version = "0.3.1"
authors = ["Alex Macleod <alex@macleod.io>"]
license = "MIT"

categories = [ "command-line-utilities" ]
keywords = [
    "file",
    "directory",
    "size"
]

[badges]
travis-ci = { repository = "Alexendoo/density" }

[dependencies]
getopts = "0.2"
